packages/client/src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

main {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 20px;
}

main span {
  color: red;
  margin: 5px;
  font-size: 8px;
  position: relative;
}

@media (max-width: 1440px) {
  main {
    height: 600px;
  }

  main span {
    font-size: 18px;
    top: -84px;
  }

  main .content {
    border-radius: 20px;
    height: 400px;
    width: 800px;
    position: relative;
    top: 20px;
  }

  .content .theme-button {
    background-color: transparent;
    border: 0;
    font-size: 18px;
    margin-top: 10px;
    margin-left: 46%;
    margin-right: 54%;
    position: relative;
    top: -120px;
  }
}

@media (max-width: 1280px) {
  main {
    height: 750px;
  }

  main span {
    font-size: 18px;
    top: -105px;
  }

  main .content {
    border-radius: 20px;
    height: 500px;
    width: 800px;
    position: relative;
    top: 10px;
  }

  .content .theme-button {
    background-color: transparent;
    border: 0;
    font-size: 18px;
    margin-top: 10px;
    margin-left: 46%;
    margin-right: 54%;
    position: relative;
    top: -130px;
  }
}

@media (max-width: 834px) {
  main {
    height: 1100px;
  }

  main span {
    font-size: 18px;
    top: -105px;
  }

  main .content {
    border-radius: 20px;
    height: 700px;
    width: 800px;
    position: relative;
    top: 40px;
  }

  .content .theme-button {
    background-color: transparent;
    border: 0;
    font-size: 18px;
    margin-top: 10px;
    margin-left: 46%;
    margin-right: 54%;
    position: relative;
    top: -130px;
  }
}

@media (max-width: 768px) {
  main {
    height: 900px;
  }

  main span {
    font-size: 18px;
    top: -75px;
  }

  main .content {
    border-radius: 20px;
    height: 700px;
    width: 750px;
    position: relative;
    top: 40px;
  }

  .content .theme-button {
    background-color: transparent;
    border: 0;
    font-size: 18px;
    margin-top: 10px;
    margin-left: 46%;
    margin-right: 54%;
    position: relative;
    top: -130px;
  }
}

@media (max-width: 414px) {
  main {
    height: 700px;
  }

  main span {
    font-size: 18px;
    top: -15px;
  }

  main .content {
    border-radius: 20px;
    height: 700px;
    width: 414px;
    position: relative;
    top: 90px;
  }

  .content .theme-button {
    background-color: transparent;
    border: 0;
    font-size: 14px;
    margin-left: 46%;
    margin-right: 54%;
    position: relative;
    top: -110px;
  }
}

@media (max-width: 390px) {
  main {
    height: 700px;
  }

  main span {
    font-size: 18px;
  }

  main .content {
    border-radius: 20px;
    height: 700px;
    width: 390px;
    position: relative;
    top: 90px;
  }

  .content .theme-button {
    background-color: transparent;
    border: 0;
    font-size: 14px;
    margin-left: 46%;
    margin-right: 54%;
    position: relative;
    top: -110px;
  }
}

@media (max-width: 360px) {
  main {
    height: 700px;
  }

  main span {
    font-size: 18px;
    top: -20px;
  }

  main .content {
    border-radius: 20px;
    height: 700px;
    width: 358px;
    position: relative;
    top: 90px;
  }

  .content .theme-button {
    background-color: transparent;
    border: 0;
    font-size: 14px;
    margin-left: 46%;
    margin-right: 54%;
    position: relative;
    top: -110px;
  }
}

